@@ -53,6 +53,8 @@ Version 1.8.1
        page from merge wizard. (Stefan)
 - BUG: Issue #517: statistics button stays
        disabled when filter is cleared. (Stefan)
+- BUG: Issue #520: TortoiseMerge fails to detect
+       utf-16 without BOM. (Stefan)
 
 Version 1.8.0
 See the release notes here:
